cmake_minimum_required(VERSION 3.8)

add_executable(lc_main lc_main.cpp)

# weekly
add_subdirectory(167)
add_subdirectory(168)
add_subdirectory(169)
add_subdirectory(170)
add_subdirectory(171)
add_subdirectory(172)
add_subdirectory(173)
add_subdirectory(174)
add_subdirectory(175)
add_subdirectory(176)
add_subdirectory(177)
add_subdirectory(178)

# biweekly
add_subdirectory(b16)
add_subdirectory(b17)
add_subdirectory(b18)
add_subdirectory(b19)
add_subdirectory(b20)

# template
add_subdirectory(TMP-999)
