cmake_minimum_required(VERSION 3.8)

add_subdirectory(cf601)
add_subdirectory(cf602)
add_subdirectory(edu77)
add_subdirectory(cf603)
add_subdirectory(cf600)
add_subdirectory(nerc2019)
add_subdirectory(cf604)
add_subdirectory(edu76)
add_subdirectory(cf595)
add_subdirectory(cf605)
add_subdirectory(cf606)
add_subdirectory(cf608)
add_subdirectory(cf607)
