cmake_minimum_required(VERSION 3.8)

# 1029
add_executable(cf_1251E1 1251E1.cpp)
target_link_libraries(cf_1251E1)

add_executable(cf_996A 996A.cpp)
target_link_libraries(cf_996A)

add_executable(cf_1180A 1180A.cpp)
target_link_libraries(cf_1180A)

add_executable(cf_702A 702A.cpp)
target_link_libraries(cf_702A)

add_executable(cf_1206B 1206B.cpp)
target_link_libraries(cf_1206B)

add_executable(cf_1113A 1113A.cpp)
target_link_libraries(cf_1113A)

# 1030
add_executable(cf_580A 580A.cpp)
target_link_libraries(cf_580A)

add_executable(cf_1182A 1182A.cpp)
target_link_libraries(cf_1182A)

add_executable(cf_706B 706B.cpp)
target_link_libraries(cf_706B)

# 1101
add_executable(cf_368B 368B.cpp)
target_link_libraries(cf_368B)

add_executable(cf_732B 732B.cpp)
target_link_libraries(cf_732B)

# 1102
add_executable(cf_651A 651A.cpp)
target_link_libraries(cf_651A)

add_executable(cf_919B 919B.cpp)
target_link_libraries(cf_919B)

add_executable(cf_753A 753A.cpp)
target_link_libraries(cf_753A)


