cmake_minimum_required(VERSION 3.8)

# 1105
add_executable(cf_910A 910A.cpp)
target_link_libraries(cf_910A)

add_executable(cf_327A 327A.cpp)
target_link_libraries(cf_327A)

# 1106
add_executable(cf_313B 313B.cpp)
target_link_libraries(cf_313B)

add_executable(cf_363B 363B.cpp)
target_link_libraries(cf_363B)

# 1107
add_executable(cf_433B 433B.cpp)
target_link_libraries(cf_433B)

add_executable(cf_1097B 1097B.cpp)
target_link_libraries(cf_1097B)

add_executable(cf_1029B 1029B.cpp)
target_link_libraries(cf_1029B)

add_executable(cf_1140D 1140D.cpp)
target_link_libraries(cf_1140D)

add_executable(cf_998B 998B.cpp)
target_link_libraries(cf_998B)

# 1108
add_executable(cf_1245B 1245B.cpp)
target_link_libraries(cf_1245B)

add_executable(cf_1042B 1042B.cpp)
target_link_libraries(cf_1042B)

# 1111
add_executable(cf_189A 189A.cpp)
target_link_libraries(cf_189A)
