cmake_minimum_required(VERSION 3.8)

# 1124
add_executable(cf602_1262A 1262A.cpp)
add_executable(cf602_1262B 1262B.cpp)
add_executable(cf602_1262C 1262C.cpp)
add_executable(cf602_1262D1 1262D1.cpp)
add_executable(cf602_1262D 1262D.cpp)
add_executable(cf602_1262E 1262E.cpp)
add_executable(cf602_1262F 1262F.cpp)
add_executable(cf602_1262G 1262G.cpp)
