cmake_minimum_required(VERSION 3.8)

# add_subdirectory(n1)

# 提高历练地
# 已经去除了普及组难度的，请组织放心。成长大牛之必写题！！！

# n1
# 搜索Ex 2909人过关
# 关卡3-1，6 道题 可挑战
# 开始提高组的试炼。这里已经去除了所有普及组难度的题目。哼哼，怕了吧。。

# n2
# 动态规划TG.lv(1) 3778人过关
# 关卡3-2，5 道题 可挑战
# 这是提高组难度中比较基础的动态规划，也许一两个转移方程就可以写出。

# n3
# 动态规划TG.lv(2) 2287人过关
# 关卡3-3，5 道题 可挑战
# 这里的动态规划稍稍有所加大难度，思考转移方程的时间可能会与编写程序的时间持平。

# n4
# 动态规划TG.lv(3) 1140人过关
# 关卡3-4，6 道题 可挑战
# 比较需要技巧的动态规划。有的不仅仅需要状态转移方程，可能还会与别的算法综合。

# n5
# 数论 3972人过关
# 关卡3-5，5 道题 可挑战
# 数论就是研究整数的理论。包括公约公倍数、质数、欧拉定理和同余方程等。

# n6
# 博弈论 1458人过关
# 关卡3-6，6 道题 可挑战
# 博弈论考虑游戏中的个体的预测行为和实际行为，并研究它们的优化策略。

# n7
# 其他数学问题 996人过关
# 关卡3-7，7 道题 可挑战
# 听说学oi的同志们数学都挺好。那么。就请完成下面的题目证明这一点吧！

# n8
# 图的遍历 4091人过关
# 关卡3-8，4 道题 可挑战
# 图是一种非常重要的数据结构，描述对象复杂的练习。这里开始接触图的基本概念。

# n9
# 最短路问题 5272人过关
# 关卡3-9，6 道题 可挑战
# 最短路是图论中最重要的部分，多种算法可以应用。很多题目都可以抽象成这种模型。

# n10
# 最小生成树 4360人过关
# 关卡3-10，4 道题 可挑战
# 最小生成树可以用kruskal（克鲁斯卡尔）算法或prim（普里姆）算法求出。

# n11
# 较复杂图论I 2902人过关
# 关卡3-11，4 道题 可挑战
# 别的些图论问题，包括树、拓扑排序等。要过这一关，需要学习不少新的算法。

# n12
# 较复杂图论II 1881人过关
# 关卡3-12，5 道题 可挑战
# 更高级的图论算法。包括差分约束、强连通、二分图等。会更难一些。

# n13
# 并查集 4899人过关
# 关卡3-13，4 道题 可挑战
# 用于处理一些不相交集合的合并及查询问题。常常在使用中以森林来表示。

# n14
# 堆 1977人过关
# 关卡3-14，5 道题 可挑战
# 堆总是一棵完全树；堆中某个节点的值总是不大于或不小于其父节点的值。

# n15
# 线段树树状数组基础 2812人过关
# 关卡3-15，4 道题 可挑战
# 这都是比较高级的线性数据结构。在处理一些询问与修改线性问题时，是很好用的。

# n16
# 神奇的解法 2191人过关
# 关卡3-16，4 道题 可挑战
# 有些问题刚开始觉得无从下手。好好想一想，尽量别看题解，否则你会大呼“简单”。

# n17
# 倍增 1186人过关
# 关卡3-17，3 道题 可挑战
# 一种特殊的枚举算法，但可大大加快效率。近年noip有考到。难度较大。

# n18
# 强连通分量 1360人过关
# 关卡3-18，5 道题 可挑战
# 强连通分量

# n19
# BOSS战-提高综合练习1 760人过关
# 关卡3-19，5 道题 可挑战
# 年轻人，又是个送上门的，让我来看看你真实的本领。啊哈哈哈哈哈！

# n20
# BOSS战-提高综合练习2 795人过关
# 关卡3-20，5 道题 可挑战
# 再来！这里有的题目并非单纯的考察某个算法，而是考察一种综合性的思维。

# n21
# BOSS战-提高综合练习3 2189人过关
# 关卡3-21，4 道题 可挑战
# 既然已经打倒了前面2个boss，那么第3个也是没有问题的。少年，来吧！

# n22
# 提高模板-nlogn数据结构 6590人过关
# 关卡3-22，6 道题 可挑战
# 虽然这些算法不是noip必须的，但是不算困难，很多题目可以使用这些方法。
