cmake_minimum_required(VERSION 3.8)

add_subdirectory(n1)
add_subdirectory(n2)
add_subdirectory(n3)
add_subdirectory(n4)
add_subdirectory(n5)
add_subdirectory(n6)
add_subdirectory(n7)
add_subdirectory(n8)

# 普及练习场
# 普及组选手可冲刺训练，提高组选手亦可在此巩固基础。

# n1
# 简单的模拟 28480人过关
# 关卡2-1，6 道题 已通过
# 开始普及组的训练！所谓模拟，就是直接根据题意编写，思维难度简单。

# n2
# 交叉模拟 13369人过关
# 关卡2-2，6 道题 可挑战
# 这里也是模拟，但是会混有些别的部分。思维难度不大，但是编写起来会有些难度。

# n3
# 排序 25585人过关
# 关卡2-3，4 道题 已通过
# 将杂乱无章的数据变得有规律。有各种各样的排序算法，看情况使用。

# n4
# 排序Ex 14837人过关
# 关卡2-4，4 道题 已通过
# 这里的排序就更上一层了。不仅融合了别的算法与技巧，排序本身也有各种花招。

# n5
# 字符串处理 11293人过关
# 关卡2-5，4 道题 可挑战
# 这里的字符串处理还会变得更加的有意思，难度也更大。需要好好地思考一下。

# n6
# 贪心 18152人过关
# 关卡2-6，8 道题 可挑战
# 贪心就是只考虑眼前的利益。对于我们人生来说太贪是不好的，不过oi中，有时是对的。

# n7
# 深度优先搜索 14232人过关
# 关卡2-7，6 道题 可挑战
# 搜索可以穷举各种情况。很多题目都可以用搜索完成。就算不能，搜索也是骗分神器。

# n8
# 广度优先搜索 10965人过关
# 关卡2-8，5 道题 可挑战
# 广度优先搜索可以用来找有关“最短步数”的问题。恩，也可以用来“地毯式搜索”。

# n9
# 带有技巧的搜索 6831人过关
# 关卡2-9，4 道题 可挑战
# 这里的搜索不仅包含了dfs和bfs，还包括剪枝、记录等技巧以加快速度。

# n10
# 分治算法 9760人过关
# 关卡2-10，4 道题 可挑战
# 将大问题拆分为小问题，分而治之，各个击破，然后在合并回来。

# n11
# 简单数学问题 10369人过关
# 关卡2-11，6 道题 可挑战
# 用计算机解决某些麻烦数学问题，再合适不过了。这真是绝妙的搭配啊！

# n12
# 递推与递归二分 11644人过关
# 关卡2-12，7 道题 可挑战
# 递推，层层递进，由基础推向顶层。二分不仅可以用来查找数据，还可以确定最合适的值。

# n13
# 线性数据结构 12378人过关
# 关卡2-13，5 道题 可挑战
# 数组，链表，队列，栈，都是线性结构。巧用这些结构可以做出不少方便的事情。

# n14
# 树形数据结构 7778人过关
# 关卡2-14，4 道题 可挑战
# 由一个根节点分叉，越分越多，就成了树。树可以表示数据之间的从属关系

# n15
# 动态规划的背包问题 20454人过关
# 关卡2-15，6 道题 可挑战
# 这是最基础的动态规划。不过如果是第一次接触会有些难以理解。加油闯过这个坎。

# n16
# 线性动态规划 10597人过关
# 关卡2-16，6 道题 可挑战
# 这也是基础的动态规划。是在线性结构上面的动态规划，一定要掌握。

# n17
# 多维动态规划 7873人过关
# 关卡2-17，6 道题 可挑战
# 这里的动态规划就不止一维了。不仅要小心时间复杂度，也要注意空间复杂度。

# n18
# 更要技巧的动规与记忆化 6101人过关
# 关卡2-18，6 道题 可挑战
# 这边的题目有各种搞法。当然有的题目也可以使用记忆化搜索来降低思维难度。

# n19
# 高精度算法 12154人过关
# 关卡2-19，5 道题 可挑战
# 就算是long long（或int64）还不够怎么办？用高精度算法。自己动手丰衣足食。

# n20
# 贪心EX 2972人过关
# 关卡2-20，4 道题 可挑战
# 虽然是贪心题，可能不是你当时你虐着玩的贪心惹qwq

# n21
# 简单数学 4618人过关
# 关卡2-21，5 道题 可挑战
# 数学和oi是密切相关的，数学不仅是oi的基础，而且是算法的核心。

# n22
# BOSS战-普及综合练习1 3531人过关
# 关卡2-22，4 道题 可挑战
# 好不容易闯到这一关，你那还等什么呢？抄起家伙赶快上啊！

# n23
# BOSS战-普及综合练习2 4202人过关
# 关卡2-23，5 道题 可挑战
# 来搞定第二个BOSS。虽然战斗艰难，但你一定没有问题。

# n24
# BOSS战-普及综合练习3 3646人过关
# 关卡2-24，4 道题 可挑战
# 普及练习场的大BOSS：“一定让你有去无回”。怎么办呢？只能打倒他开启下一个级别！

# n25
# 普及常见模板 10443人过关
# 关卡2-25，5 道题 可挑战
# 这里集中了比较基础的算法的模板。提高和省选也有模板题哦！
