cmake_minimum_required(VERSION 3.8)

add_subdirectory(n1)
add_subdirectory(n2)
add_subdirectory(n3)
add_subdirectory(n4)
add_subdirectory(n5)
add_subdirectory(n6)
add_subdirectory(n7)
add_subdirectory(n8)

# 新手村
# 任何一个伟大的目标，都有一个微不足道的开始。

# n1
# 洛谷的第一个任务 104055人过关
# 关卡1-1，4 道题 已通过
# 勇敢的迈出第一步，了解下语言和洛谷。跟着书本和老师走，不会难的。

# n2
# 顺序与分支 73676人过关
# 关卡1-2，4 道题 已通过
# 计算机的智能性开始得以体现，因为计算机能够根据不同的条件选择了。

# n3
# 循环！循环！循环！ 67771人过关
# 关卡1-3，5 道题 已通过
# 计算机最不怕的就是重复。你让它做10000次同样的事它也不怕啦，但是让他做1亿亿次的话……

# n4
# 数组 58686人过关
# 关卡1-4，6 道题 已通过
# 跟数组有关的题目基本上都要用到循环，所以请先完成1-3。

# n5
# 简单字符串 41864人过关
# 关卡1-5，6 道题 已通过
# 计算机不仅可以处理数字，还能处理文字！就是其实跟数字也没什么差。

# n6
# 过程函数与递归 30496人过关
# 关卡1-6，4 道题 已通过
# 将代码串进行打包，就是过程与函数。过程与函数调用自己则为递归。有一点小难但不要怕哦。

# n7
# BOSS战-入门综合练习1 27321人过关
# 关卡1-7，4 道题 已通过
# 这里将前面的内容综合起来了，会有点难，不过你可以问老师同学，也能上网查资料。

# n8
# BOSS战-入门综合练习2 24485人过关
# 关卡1-8，5 道题 已通过
# 勇士，竟然来到了BOSS的老巢！来一场恶斗，证明自己的实力，解锁下一个级别！
