cmake_minimum_required(VERSION 3.8)

# 1124
add_executable(cf_1262A 1262A.cpp)
add_executable(cf_1262B 1262B.cpp)
add_executable(cf_1262C 1262C.cpp)
add_executable(cf_1262D1 1262D1.cpp)
add_executable(cf_1262D2 1262D2.cpp)
add_executable(cf_1262E 1262E.cpp)
add_executable(cf_1262F1 1262F1.cpp)
add_executable(cf_1262F2 1262F2.cpp)
