cmake_minimum_required(VERSION 3.8)

# 12-24
add_executable(cf_cf610_A cf_A.cpp)
add_executable(cf_cf610_B cf_B.cpp)
add_executable(cf_cf610_B2 cf_B2.cpp)
add_executable(cf_cf610_C cf_C.cpp)
add_executable(cf_cf610_D cf_D.cpp)
add_executable(cf_cf610_E cf_E.cpp)

# Problems 1282	 
# A	
# Temporarily unavailable
# standard input/output
# 1 s, 256 MB	Submit Add to favourites	 x8362
# B1	
# K for the Price of One (Easy Version)
# standard input/output
# 2 s, 256 MB	Submit Add to favourites	 x5552
# B2	
# K for the Price of One (Hard Version)
# standard input/output
# 2 s, 256 MB	Submit Remove from favourites	 x4505
# C	
# Petya and Exam
# standard input/output
# 2 s, 256 MB	Submit Remove from favourites	 x2267
# D	
# Enchanted Artifact
# standard input/output
# 1 s, 256 MB	Submit Add to favourites	 x1099
# E	
# The Cake Is a Lie
# standard input/output
# 2 s, 256 MB	Submit Add to favourites	 x508
