cmake_minimum_required(VERSION 3.8)

# 1220
add_executable(cf_edu79_A cf_A.cpp)
add_executable(cf_edu79_B cf_B.cpp)
add_executable(cf_edu79_C cf_C.cpp)
add_executable(cf_edu79_D cf_D.cpp)
add_executable(cf_edu79_E cf_E.cpp)
add_executable(cf_edu79_F cf_F.cpp)

# Problems	 1279
# A	
# New Year Garland
# standard input/output
# 1 s, 256 MB	Submit Add to favourites	 x6587
# B	
# Verse For Santa
# standard input/output
# 1 s, 256 MB	Submit Add to favourites	 x4312
# C	
# Stack of Presents
# standard input/output
# 1 s, 256 MB	Submit Add to favourites	 x3549
# D	
# Santa's Bot
# standard input/output
# 5 s, 256 MB	Submit Add to favourites	 x1608
# E	
# New Year Permutations
# standard input/output
# 1 s, 256 MB	Submit Add to favourites	 x31
# F	
# New Year and Handle Change
# standard input/output
# 3 s, 256 MB	Submit Add to favourites	 x33
