cmake_minimum_required(VERSION 3.8)

# 1201
add_executable(cf_1267A 1267A.cpp)
add_executable(cf_1267B 1267B.cpp)
add_executable(cf_1267C 1267C.cpp)
add_executable(cf_1267D 1267D.cpp)
add_executable(cf_1267E 1267E.cpp)
add_executable(cf_1267F 1267F.cpp)
add_executable(cf_1267G 1267G.cpp)
add_executable(cf_1267L 1267L.cpp)
