cmake_minimum_required(VERSION 3.8)

# 1202
add_executable(cf_750A 750A.cpp)
add_executable(cf_1138A 1138A.cpp)
add_executable(cf_978C 978C.cpp)
add_executable(cf_1195B 1195B.cpp)
add_executable(cf_1099B 1099B.cpp)
add_executable(cf_492B 492B.cpp)
add_executable(cf_1221C 1221C.cpp)

# 1203
add_executable(cf_743B 743B.cpp)

# 1204
add_executable(cf_1131C 1131C.cpp)

# 1209
add_executable(cf_166A 166A.cpp)
