cmake_minimum_required(VERSION 3.8)

# 1-6
add_executable(lg_basic_n1_A A.cpp)
add_executable(lg_basic_n1_B B.cpp)
add_executable(lg_basic_n1_C C.cpp)
add_executable(lg_basic_n1_D D.cpp)
add_executable(lg_basic_n1_E E.cpp)
add_executable(lg_basic_n1_F F.cpp)

# P1003 铺地毯
# P1067 多项式输出
# P1540 机器翻译
# P1056 排座椅
# P1328 生活大爆炸版石头剪刀布
# P1563 玩具谜题
