cmake_minimum_required(VERSION 3.8)

# 1-6
add_executable(lg_basic_n1_A lg_A.cpp)
add_executable(lg_basic_n1_B lg_B.cpp)
add_executable(lg_basic_n1_C lg_C.cpp)
add_executable(lg_basic_n1_D lg_D.cpp)
add_executable(lg_basic_n1_E lg_E.cpp)
add_executable(lg_basic_n1_F lg_F.cpp)

# 简单的模拟
# 关卡2-1， 6道题 已通过
# 任务说明：开始普及组的训练！所谓模拟，就是直接根据题意编写，思维难度简单。

# P1003 铺地毯
# P1067 多项式输出
# P1540 机器翻译
# P1056 排座椅
# P1328 生活大爆炸版石头剪刀布
# P1563 玩具谜题
