cmake_minimum_required(VERSION 3.8)

# 1-7
add_executable(lg_basic_n2_A A.cpp)
add_executable(lg_basic_n2_B B.cpp)
add_executable(lg_basic_n2_C C.cpp)
add_executable(lg_basic_n2_D D.cpp)
add_executable(lg_basic_n2_E E.cpp)
add_executable(lg_basic_n2_F F.cpp)

# 交叉模拟
# 关卡2-2， 6道题 可挑战
# 任务说明：这里也是模拟，但是会混有些别的部分。思维难度不大，但是编写起来会有些难度。

# P1023 税收与补贴问题
# P1031 均分纸牌
# P1042 乒乓球
# P1086 花生采摘
# P1098 字符串的展开
# P3952 时间复杂度
