cmake_minimum_required(VERSION 3.8)

# 1-7
add_executable(lg_basic_n3_A A.cpp)
add_executable(lg_basic_n3_B B.cpp)
add_executable(lg_basic_n3_C C.cpp)
add_executable(lg_basic_n3_D D.cpp)

# 排序
# 关卡2-3， 4道题 可挑战
# 任务说明：将杂乱无章的数据变得有规律。有各种各样的排序算法，看情况使用。

# P1177 【模板】快速排序
# P1059 明明的随机数
# P1068 分数线划定
# P1781 宇宙总统
