cmake_minimum_required(VERSION 3.8)

# 1-9
add_executable(lg_basic_n4_A lg_A.cpp)
add_executable(lg_basic_n4_B lg_B.cpp)
add_executable(lg_basic_n4_C lg_C.cpp)
add_executable(lg_basic_n4_D lg_D.cpp)

# 排序Ex
# 关卡2-4， 4道题 可挑战
# 任务说明：这里的排序就更上一层了。不仅融合了别的算法与技巧，排序本身也有各种花招。

# P1583 魔法照片
# P1051 谁拿了最多奖学金
# P1093 奖学金
# P1309 瑞士轮
