cmake_minimum_required(VERSION 3.8)

# 1-9
add_executable(lg_basic_n5_A lg_A.cpp)
add_executable(lg_basic_n5_B lg_B.cpp)
add_executable(lg_basic_n5_C lg_C.cpp)
add_executable(lg_basic_n5_D lg_D.cpp)

# 字符串处理
# 关卡2-5， 4道题 可挑战
# 任务说明：这里的字符串处理还会变得更加的有意思，难度也更大。需要好好地思考一下。

# P1603 斯诺登的密码
# P1071 潜伏者
# P1012 拼数
# P1538 迎春舞会之数字舞蹈
