cmake_minimum_required(VERSION 3.8)

# 1-11
add_executable(lg_basic_n6_A lg_A.cpp)
add_executable(lg_basic_n6_B lg_B.cpp)
add_executable(lg_basic_n6_C lg_C.cpp)
add_executable(lg_basic_n6_D lg_D.cpp)
add_executable(lg_basic_n6_E lg_E.cpp)
add_executable(lg_basic_n6_F lg_F.cpp)
add_executable(lg_basic_n6_G ../n2/lg_B.cpp)
add_executable(lg_basic_n6_H lg_H.cpp)

# 贪心
# 关卡2-6， 8道题 可挑战
# 任务说明：贪心就是只考虑眼前的利益。对于我们人生来说太贪是不好的，不过oi中，有时是对的。

# P1090 合并果子
# P1181 数列分段Section I
# P1208 [USACO1.3]混合牛奶 Mixing Milk
# P1223 排队接水
# P1094 纪念品分组
# P1803 凌乱的yyy / 线段覆盖
# P1031 均分纸牌
# P1080 国王游戏
