cmake_minimum_required(VERSION 3.8)

# 1-14
add_executable(lg_basic_n7_A lg_A.cpp)
add_executable(lg_basic_n7_B lg_B.cpp)
add_executable(lg_basic_n7_C lg_C.cpp)
add_executable(lg_basic_n7_D lg_D.cpp)
add_executable(lg_basic_n7_E lg_E.cpp)
add_executable(lg_basic_n7_F lg_F.cpp)
add_executable(lg_basic_n7_F2 lg_F2.cpp)

# 深度优先搜索
# 关卡2-7， 6道题 可挑战
# 任务说明：搜索可以穷举各种情况。很多题目都可以用搜索完成。就算不能，搜索也是骗分神器。

# P1219 八皇后
# P1019 单词接龙
# P1101 单词方阵
# P1605 迷宫
# P1040 加分二叉树
# P1092 虫食算
