cmake_minimum_required(VERSION 3.8)

# 1-14
add_executable(lg_basic_n8_A lg_A.cpp)
add_executable(lg_basic_n8_B lg_B.cpp)
add_executable(lg_basic_n8_C lg_C.cpp)
add_executable(lg_basic_n8_D lg_D.cpp)
add_executable(lg_basic_n8_E lg_E.cpp)

# 广度优先搜索
# 关卡2-8， 5道题 可挑战
# 任务说明：广度优先搜索可以用来找有关“最短步数”的问题。恩，也可以用来“地毯式搜索”。

# P1162 填涂颜色
# P1032 字串变换
# P1141 01迷宫
# P1126 机器人搬重物
# P1443 马的遍历
