cmake_minimum_required(VERSION 3.8)

# 1-1
add_executable(lg_1000 1000.cpp)
add_executable(lg_1001 1001.cpp)
add_executable(lg_1421 1421.cpp)
add_executable(lg_1425 1425.cpp)

# 洛谷的第一个任务
# 关卡1-1， 4道题 已通过
# 任务说明：勇敢的迈出第一步，了解下语言和洛谷。跟着书本和老师走，不会难的。

# P1000 超级玛丽游戏
# P1001 A+B Problem
# P1421 小玉买文具
# P1425 小鱼的游泳时间
