cmake_minimum_required(VERSION 3.8)

# 1-1
add_executable(lg_newbie_n2_A lg_A.cpp)
add_executable(lg_newbie_n2_B lg_B.cpp)
add_executable(lg_newbie_n2_C lg_C.cpp)
add_executable(lg_newbie_n2_D lg_D.cpp)

# 顺序与分支
# 关卡1-2， 4道题 已通过
# 任务说明：计算机的智能性开始得以体现，因为计算机能够根据不同的条件选择了。

# P1422 小玉家的电费
# P1085 不高兴的津津
# P1089 津津的储蓄计划
# P1909 买铅笔
