cmake_minimum_required(VERSION 3.8)

# 1-1
add_executable(lg_newbie_n3_A lg_A.cpp)
add_executable(lg_newbie_n3_B lg_B.cpp)
add_executable(lg_newbie_n3_C lg_C.cpp)
add_executable(lg_newbie_n3_D lg_D.cpp)
add_executable(lg_newbie_n3_E lg_E.cpp)

# 循环！循环！循环！
# 关卡1-3， 5道题 已通过
# 任务说明：计算机最不怕的就是重复。你让它做10000次同样的事它也不怕啦，但是让他做1亿亿次的话……

# P1008 三连击
# P1035 级数求和
# P1423 小玉在游泳
# P1424 小鱼的航程(改进版)
# P1980 计数问题
