cmake_minimum_required(VERSION 3.8)

# 1-2
add_executable(lg_newbie_n4_A lg_A.cpp)
add_executable(lg_newbie_n4_B lg_B.cpp)
add_executable(lg_newbie_n4_C lg_C.cpp)
add_executable(lg_newbie_n4_D lg_D.cpp)
add_executable(lg_newbie_n4_E lg_F.cpp)
add_executable(lg_newbie_n4_F lg_F.cpp)

# 数组
# 关卡1-4， 6道题 已通过
# 任务说明：跟数组有关的题目基本上都要用到循环，所以请先完成1-3。

# P1046 陶陶摘苹果
# P1047 校门外的树
# P1427 小鱼的数字游戏
# P1428 小鱼比可爱
# P2141 珠心算测验
# P1567 统计天数
