cmake_minimum_required(VERSION 3.8)

# 1-2
add_executable(lg_newbie_n5_A lg_A.cpp)
add_executable(lg_newbie_n5_B lg_B.cpp)
add_executable(lg_newbie_n5_C lg_C.cpp)
add_executable(lg_newbie_n5_D lg_D.cpp)
add_executable(lg_newbie_n5_E lg_E.cpp)
add_executable(lg_newbie_n5_F lg_F.cpp)

# 简单字符串
# 关卡1-5， 6道题 已通过
# 任务说明：计算机不仅可以处理数字，还能处理文字！就是其实跟数字也没什么差。

# P1055 ISBN号码
# P1200 [USACO1.1]你的飞碟在这儿Your Ride Is Here
# P1308 统计单词数
# P1553 数字反转（升级版）
# P1598 垂直柱状图
# P1914 小书童——密码
