cmake_minimum_required(VERSION 3.8)

# 1-3
add_executable(lg_newbie_n6_A lg_A.cpp)
add_executable(lg_newbie_n6_B lg_A.cpp)
add_executable(lg_newbie_n6_C lg_A.cpp)
add_executable(lg_newbie_n6_D lg_A.cpp)

# 过程函数与递归
# 关卡1-6， 4道题 已通过
# 任务说明：将代码串进行打包，就是过程与函数。过程与函数调用自己则为递归。有一点小难但不要怕哦。

# P1028 数的计算
# P1036 选数
# P1149 火柴棒等式
# P1217 [USACO1.5]回文质数 Prime Palindromes
