cmake_minimum_required(VERSION 3.8)

# 1-3
add_executable(lg_1478 1478.cpp)
add_executable(lg_1618 1618.cpp)
add_executable(lg_1579 1579.cpp)
add_executable(lg_2089 2089.cpp)

# BOSS战-入门综合练习1
# 关卡1-7， 4道题 已通过
# 任务说明：这里将前面的内容综合起来了，会有点难，不过你可以问老师同学，也能上网查资料。

# P1478 陶陶摘苹果（升级版）
# P1618 三连击（升级版）
# P1579 哥德巴赫猜想（升级版）
# P2089 烤鸡
